--- a/src/scss/partials/_comments.scss
+++ b/src/scss/partials/_comments.scss
@@ -129,3 +129,13 @@
     padding-left: 20px;
   }
 }
+
+.comment, .reply {
+  .entry {
+    pre code {
+      @include breakpoint($big) {
+        min-width: 100%;
+      }
+    }
+  }
+}
